# Competitive-research

./: .gitignore  agent_rules.md  competitive_report.md  competitive_report_2026_06.md  dashboard_template.html  main.py  pyproject.toml  register_startup.ps1  run_daily_report.ps1  stores_db.json  update_report.py  uv.toml  ~$mpetitive_report.md
report/: 2026_06_08_competitive_map.html  2026_06_08_competitive_report.pptx  2026_06_12_competitive_map.html  2026_06_12_competitive_report.pptx  2026_06_13_competitive_map.html  2026_06_13_competitive_report.pptx  2026_06_15_competitive_map.html  2026_06_15_competitive_report.pptx  2026_06_16_competitive_map.html  2026_06_16_competitive_report.pptx  2026_06_17_competitive_map.html  2026_06_17_competitive_report.pptx  2026_06_18_competitive_map.html  2026_06_18_competitive_report.pptx  2026_06_22_competitive_map.html  2026_06_22_competitive_report.pptx  2026_06_23_competitive_map.html  2026_06_23_competitive_report.pptx  2026_06_24_competitive_map.html  2026_06_24_competitive_report.pptx  2026_06_25_competitive_map.html  2026_06_25_competitive_report.pptx  2026_06_26_competitive_map.html  2026_06_26_competitive_report.pptx  2026_06_28_competitive_map.html  2026_06_28_competitive_map_no_limit.html  2026_06_28_competitive_map_within_2km.html  2026_06_28_competitive_report.pptx  2026_06_28_competitive_report_no_limit.pptx  2026_06_28_competitive_report_within_2km.pptx  2026_06_29_competitive_map_within_2km.html  2026_06_29_competitive_report_within_2km.pptx  competitive_report_no_limit.md  competitive_report_within_2km.md
(+5 files in other folders)
