[project]
name = "agitated-galileo"
version = "0.1.0"
description = "Competitive research report generator for Ikari Supermarket"
authors = [
    {name = "Antigravity", email = "antigravity@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "python-pptx>=0.6.21",
    "matplotlib>=3.8.0",
    "folium>=0.15.0"
]

[tool.uv]
package = false
